--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -908,7 +908,7 @@ pointer-events: none;
 }
 
 .search-field {
-  max-width: 327px;
+  /* max-width: 327px; */
   margin-left: auto;
   margin-right: 0;
   margin-bottom: 0;
