--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7263,7 +7263,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   justify-content: space-between;
   gap: 15px;  
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 30px !important;
 }
 
 .btn-recurring-occurrence, .recurring-end-date {
@@ -7271,7 +7271,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   border: none;
   font-size: 14px;
   cursor: pointer;
-  transition: 0.3s;
+  /* transition: 0.3s; */
   outline: none;
 }
 
@@ -7382,4 +7382,66 @@ ul.recent-act-lw-main .act-info-wrap-left {
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
+}
+
+.btn-active {
+  background: #0081C5;
+  color: white;
+  border-radius: 50px !important;
+}
+
+.btn-inactive {
+  background: #F2F2F2;
+  color: #0081C5;
+  border: 0.85px solid #0081C5;
+  border-radius: 50px !important;
+}
+
+.RecurringScheduleDateWrap {
+  display: flex;
+  width: 100%;
+  background-color: #24BEEF1A;
+  padding: 20px;
+  border-radius: 17px;
+  margin-top: 15px;
+}
+.RecurringScheduleDateWrap>div {
+  display: flex;
+  flex-wrap: wrap;
+}
+.RSDaterange {
+  min-width: 385px;
+  margin-right: 20px;
+}
+.RSFrequency,
+.RSOccurances {
+  min-width: 200px;
+}
+
+.RecurringScheduleDateWrap p {
+  font-size: 14px;
+  color: #363853;
+  line-height: 20px;
+  font-family: "Quicksand", sans-serif;
+}
+
+.rs_cm_div .rssvg_wrap {
+  width: 55px;
+  padding-right: 15px;
+}
+
+.rs_cm_div .rssvg_wrap+div {
+  width: calc(100% - 55px);
+}
+
+.RecurringScheduleDateWrap>div:not(:last-child) {
+  margin-right: 110px;
+}
+
+.divider_date {
+  height: 1px;
+  bordeR: 1px dashed #4ECAF2;
+  width: 135px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
