--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -4770,51 +4770,6 @@
   }
 }
 
-/* Mobile-first styles */
-
-.recurring-occurrence {
-  width: 100%; /* Use 100% width on mobile for full width */
-  height: auto; /* Auto height depending on content */
-  display: flex;
-  flex-direction: column; /* stack buttons vertically on mobile */
-  justify-content: center;
-  gap: 10px;  /* Slight gap for mobile */
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.btn-recurring-occurrence, 
-.recurring-end-date {
-  border-radius: 16.95px;
-  border: none;
-  font-size: 14px;
-  cursor: pointer;
-  transition: 0.3s;
-  outline: none;
-  width: 100%; /* Almost full width on mobile */
-  padding: 8px 10px; /* Reduce padding slightly for mobile */
-}
-
-.btn-recurring-occurrence:hover, 
-.recurring-end-date:hover {
-  opacity: 0.8;
-}
-
-.btn-recurring-occurrence,
-.btn-recurring-occurrence-active {
-  background: #0081C5;
-  color: white;
-}
-
-.recurring-end-date,
-.recurring-end-date-active {
-  background: #FFFFFF;
-  color: #0081C5;
-  border: 0.85px solid #0081C5;
-}
-
-/* Tablet (and upwards) styles */
-
 @media (min-width: 768px) {
   .recurring-occurrence {
     flex-direction: row; /* On larger screens, lay them out horizontally */
@@ -4838,4 +4793,60 @@
 /* If you want to add more styles for larger screens like big tablets or desktops, add another media query */
 @media (min-width: 1024px) {
   /* Styles for larger screens */
+}
+
+@media all and (max-width:1280px) and (min-width:992px) {
+  .RecurringScheduleDateWrap>div:not(:last-child) {
+    margin-right: 40px;
+  }
+}
+
+@media all and (max-width:1100px) and (min-width:992px) {
+  .RSDaterange {
+    min-width: 270px;
+  }
+}
+
+@media all and (max-width:991px) {
+  .rs_cm_div .rssvg_wrap {
+    width: 40px;
+    padding-right: 10px;
+  }
+
+  .rs_cm_div .rssvg_wrap+div {
+    width: calc(100% - 40px);
+  }
+
+  .rs_cm_div .rssvg_wrap svg {
+    max-width: 30px;
+  }
+
+  .RSDaterange {
+    min-width: 200px;
+  }
+  .RSFrequency,
+  .RSOccurances {
+    min-width: 180px;
+  }
+
+  .RecurringScheduleDateWrap>div:not(:last-child) {
+    margin-right: 25px;
+  }
+}
+
+@media all and (max-width:767px) {
+  .RSDaterange.rs_cm_div {
+    width: 100%;
+    min-width: 100%;
+    margin-right: 0px !important;
+    margin-bottom: 15px;
+  }
+
+  .RecurringScheduleDateWrap {
+    flex-wrap: wrap;
+  }
+
+  .RSOccurances.rs_cm_div {
+    margin-bottom: 10px;
+  }
 }
