--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7028,7 +7028,19 @@ button.shedule-date-filter:hover {
   align-items: center;
 }
 
+.recurring-sp-details-inner-wrap ul li {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 .sp-details-inner-wrap .sp-user-wrap {
+  display: flex;
+  align-items: center;
+  width: calc(100% - 120px);
+}
+
+.recurring-sp-details-inner-wrap .sp-user-wrap {
   display: flex;
   align-items: center;
   width: calc(100% - 120px);
@@ -7067,6 +7079,12 @@ button.shedule-date-filter:hover {
   text-align: right;
 }
 
+.recurring-sp-details-inner-wrap .sp-amt {
+  padding-left: 10px;
+  width: 120px;
+  text-align: right;
+}
+
 .sp-details-main-wrap {
   display: flex;
   flex-wrap: wrap;
@@ -7091,6 +7109,30 @@ button.shedule-date-filter:hover {
 }
 
 .sp-details-inner-wrap li:hover {
+  background-color: #fff;
+  /* box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
+  box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.08);
+}
+
+.recurring-sp-details-inner-wrap {
+  width: calc(100% + 15px);
+  margin-left: -15px;
+}
+
+.recurring-sp-details-inner-wrap ul {
+  max-height: 500px;
+  overflow-y: auto;
+  padding: 15px;
+}
+
+.recurring-sp-details-inner-wrap li {
+  padding: 15px;
+  cursor: pointer;
+  border-radius: 15px;
+  transition: all 0.5s ease-in-out;
+}
+
+.recurring-sp-details-inner-wrap li:hover {
   background-color: #fff;
   /* box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.08);
@@ -7152,6 +7194,14 @@ button.shedule-date-filter:hover {
   border-radius: 15px;
   padding: 20px;
   max-width: 450px;
+}
+
+.recurring-sp-cal-wrap form {
+  width: 100%;
+  box-shadow: 4px 4px 15px 0px rgb(0 0 0 / 8%);
+  border-radius: 15px;
+  padding: 20px;
+  max-width: 550px;
 }
 
 /* .schedule-pay-sd-wrap .span.date-cal{
@@ -7400,10 +7450,20 @@ ul.recent-act-lw-main .act-info-wrap-left {
 .RecurringScheduleDateWrap {
   display: flex;
   width: 100%;
+  /* justify-content: space-between; */
   background-color: #24BEEF1A;
   padding: 20px;
   border-radius: 17px;
   margin-top: 15px;
+  gap: 0;
+}
+.RecurringScheduleDateWrap > div:nth-child(1) {
+  flex-basis: 25%;
+}
+.RecurringScheduleDateWrap > div:nth-child(2),
+.RecurringScheduleDateWrap > div:nth-child(3){
+  flex-basis: 37.5%;
+  justify-content: center;
 }
 .RecurringScheduleDateWrap>div {
   display: flex;
@@ -7435,7 +7495,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 
 .RecurringScheduleDateWrap>div:not(:last-child) {
-  margin-right: 110px;
+  margin-right: 0px;
 }
 
 .divider_date {
@@ -7444,4 +7504,9 @@ ul.recent-act-lw-main .act-info-wrap-left {
   width: 135px;
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.recurring-sp-details-main-wrap {
+  display: flex;
+  flex-wrap: wrap;
 }
