--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7510,3 +7510,233 @@ ul.recent-act-lw-main .act-info-wrap-left {
   display: flex;
   flex-wrap: wrap;
 }
+
+.rcr-divider-wrap {
+  height: 2px;
+  border-top: 2px solid var(--gray);
+  margin: 25px 0px;
+}
+
+.rcrc-innner-wrap-1 .rcrc-img-wrap {
+  width: 100px;
+  padding-right: 20px;
+}
+
+.rcrc-img-wrap > img {
+  width: 100%;
+}
+
+.rcr-img-wrap svg {
+  max-width: 35px;
+}
+.rcr-img-wrap span {
+  display: flex;
+  width: 80px;
+  height: 80px;
+  background-color: #eaf9fe;
+  border-radius: 41px;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.rcr-innner-wrap table {
+  width: 100%;
+}
+.rcr-innner-wrap table td {
+  /* padding: 10px 0px 10px 0px; */
+  font-size: 16px;
+  white-space: normal;
+  line-height: 20px;
+  word-break: break-word;
+}
+
+.rcr-transition-info-1 table td:first-child {
+  width: 140px;
+}
+
+.rcr-transition-info-2 table td:first-child {
+  width: 150px;
+}
+
+.rcr-innner-wrap td:last-child {
+  color: var(--dark_blue);
+}
+
+.rc-refund-all-wrap{
+  display: flex;
+}
+
+.rc-refund-main-wrap {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.08);
+  margin-top: 15px;
+  max-width: 1000px;
+  width: 55%;
+  border-radius: 24px;
+}
+.rc-refund-main-wrap .pattern-wrap {
+  background-repeat: repeat-x;
+  background-size: auto;
+  background-color: transparent;
+  height: 11px;
+}
+.rc-refund-main-wrap .pattern-wrap-bottom {
+  background-image: url("../../../public/assets/images/bottom_tringle.png");
+}
+.rc-refund-main-wrap .pattern-wrap-top {
+  background-image: url("../../../public/assets/images/top_circle_half.png");
+}
+.rc-refund-main-inner {
+  padding: 35px 25px;
+}
+
+.rc-refund-second-wrap {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.08);
+  margin-top: 15px;
+  max-width: 1000px;
+  margin-left: 5%;
+  width: 40%;
+  border-radius: 24px;
+  background-color: #24BEEF1A;
+  max-height: 420px;
+  overflow-y: auto;
+}
+.rc-refund-second-wrap .pattern-wrap {
+  background-repeat: repeat-x;
+  background-size: auto;
+  background-color: transparent;
+  height: 11px;
+}
+.rc-refund-second-wrap .pattern-wrap-bottom {
+  background-image: url("../../../public/assets/images/bottom_tringle.png");
+}
+.rc-refund-second-wrap .pattern-wrap-top {
+  background-image: url("../../../public/assets/images/top_circle_half.png");
+}
+.rc-refund-second-inner {
+  padding: 35px 25px;
+}
+
+.rc-refund-group-wrap {  
+  margin-top: 15px;
+  max-width: 1000px;
+  width: 55%;  
+}
+.rc-refund-group-wrap .pattern-wrap {
+  background-repeat: repeat-x;
+  background-size: auto;
+  background-color: transparent;
+  height: 11px;
+}
+.rc-refund-group-wrap .pattern-wrap-bottom {
+  background-image: url("../../../public/assets/images/bottom_tringle.png");
+}
+.rc-refund-group-wrap .pattern-wrap-top {
+  background-image: url("../../../public/assets/images/top_circle_half.png");
+}
+.rc-refund-group-inner {
+  padding: 35px 25px;
+}
+
+.rc-bank-details-wrapper .rcr-innner-wrap-1 {
+  padding-bottom: 25px;
+}
+.rcr-innner-wrap-1 .rcr-img-wrap {
+  width: 100px;
+  padding-right: 20px;
+}
+.rcr-innner-wrap-1 .rcr-info-main {
+  width: calc(100% - 100px);
+}
+.rcr-info-1 {
+  align-items: start;
+}
+.rcr-card-data {
+  width: calc(100% - 200px);
+  padding-bottom: 20px;
+}
+.rcr-info-1 h2 {
+  font-size: 28px;
+  line-height: 35px;
+  margin-bottom: 5px !important;
+}
+.rcr-card-data p {
+  font-size: 16px;
+  line-height: 22px;
+}
+.rcr-card-amt {
+  width: 200px;
+}
+.rcr-info-2 h4 {
+  font-weight: 600;
+}
+.rcr-info-2 p {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 600;
+  color: var(--dark_blue);
+  font-family: "Quicksand", sans-serif;
+}
+
+.freq-date-header{
+  font-family: "Quicksand", sans-serif;
+  color: var(--dark_blue);
+  line-height: 20px;
+  font-weight: 600;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+.rcr-group-label{
+  font-family: "Quicksand", sans-serif;
+  color: var(--dark_blue);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+
+.rc-refund-main-inner.section-recurring-dates .freq-date-header tr {
+  padding: 50px !important;
+}
+.section-recurring-dates .rcr-transition-info-1 table td:first-child {
+  width: calc(100% - 89px);
+}
+.section-recurring-dates .rcr-transition-info-1 table td:last-child{
+  width: 20% !important;
+  border: 8px solid #eaf9fe;
+}
+
+.rc-refund-main-inner.section-recurring-dates > .d-flex > div {
+  width: 100%;
+}
+
+.section-recurring-dates .rcr-transition-info-1 table {
+  width: 100%;
+}
+
+.w-50-md.rcr-transition-info.rcr-transition-info-1 {
+    width: 100% !important;
+}
+
+.w-50-md.rcr-transition-info.rcr-transition-info-1.first-rec-detail {
+    width: 50% !important;
+}
+
+.gl-td-1{
+  width: 50% !important;
+  padding: 10px 0px;
+}
+.gl-td-2 {
+  width: 25% !important;
+}
+.gl-td-3 {
+  width: 25% !important;
+}
+.rcr-innner-wrap.rcr-table-hover table tbody tr:hover {
+  box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.25);
+  border-radius: 10px;
+}
+.rcr-innner-wrap.rcr-table-hover table tr tr,
+.rcr-innner-wrap.rcr-table-hover table tr td {
+  padding: 10px;
+}
