--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -792,6 +792,17 @@ pointer-events: none;
   border-radius: 40px;
 }
 
+.modal-dialog-reserved-amount {
+  display: flex;
+  align-items: center;
+  background-color: transparent;
+  box-shadow: none;
+  flex-wrap: wrap;
+  overflow: hidden;
+  border-radius: 40px;
+  min-width: 80%;
+}
+
 .modal-content {
   border-radius: 40px;
   padding: 55px 60px 40px;
@@ -3749,7 +3760,7 @@ margin-bottom:0px;
   font-weight: 500;
   font-size: 16px;
   line-height: 18px;
-  color: #5B5B5B;
+  color: #5b5b5b;
   vertical-align: middle;
 }
 
@@ -7273,7 +7284,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   width: 53% !important;
 }
 
-.tab-buttons{
+.tab-buttons {
   margin-top: 10px;
   width: 100%;
 }
@@ -7319,12 +7330,13 @@ ul.recent-act-lw-main .act-info-wrap-left {
   height: 39px;
   display: flex;
   justify-content: space-between;
-  gap: 15px;  
+  gap: 15px;
   align-items: center;
   margin-bottom: 30px !important;
 }
 
-.btn-recurring-occurrence, .recurring-end-date {
+.btn-recurring-occurrence,
+.recurring-end-date {
   border-radius: 16.95px;
   border: none;
   font-size: 14px;
@@ -7333,7 +7345,8 @@ ul.recent-act-lw-main .act-info-wrap-left {
   outline: none;
 }
 
-.btn-recurring-occurrence:hover, .recurring-end-date:hover {
+.btn-recurring-occurrence:hover,
+.recurring-end-date:hover {
   opacity: 0.8;
 }
 
@@ -7341,7 +7354,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   min-width: 204px;
   height: 39px;
   padding: 8px 23px;
-  background: #0081C5;
+  background: #0081c5;
   color: white;
 }
 
@@ -7349,27 +7362,27 @@ ul.recent-act-lw-main .act-info-wrap-left {
   min-width: 138px;
   height: 39px;
   padding: 8px 19px;
-  background: #FFFFFF;
-  color: #0081C5;
-  border: 0.85px solid #0081C5;
+  background: #ffffff;
+  color: #0081c5;
+  border: 0.85px solid #0081c5;
 }
 
 .btn-recurring-occurrence-active {
-  background: #0081C5;
+  background: #0081c5;
   color: white;
 }
 
 .recurring-end-date-active {
-  background: #0081C5;
+  background: #0081c5;
   color: white;
 }
 
 .main-wrapper {
   width: 169px;
   height: 40px;
-  border-radius: 12px;  
-  border: 1px solid #0081C5;
-  box-shadow: 0px 3.76px 15.69px 0px #251F3033;
+  border-radius: 12px;
+  border: 1px solid #0081c5;
+  box-shadow: 0px 3.76px 15.69px 0px #251f3033;
   display: flex; /* To align the children horizontally */
   align-items: center; /* To center them vertically */
   justify-content: space-between; /* To spread the items equally */
@@ -7380,11 +7393,11 @@ ul.recent-act-lw-main .act-info-wrap-left {
 .number-label {
   width: 12px;
   height: 26px;
-  font-family: 'Comfortaa', sans-serif;
+  font-family: "Comfortaa", sans-serif;
   font-size: 20px;
   font-weight: 500;
-  line-height: 26px;  
-  color: #363853; 
+  line-height: 26px;
+  color: #363853;
   text-align: center; /* Center the number */
 }
 
@@ -7392,14 +7405,14 @@ ul.recent-act-lw-main .act-info-wrap-left {
   width: 28px;
   height: 28px;
   border-radius: 10px;
-  background: #F2F2F2; /* Default is for '-' */
+  background: #f2f2f2; /* Default is for '-' */
   display: flex; /* To center the button */
-  align-items: center; 
+  align-items: center;
   justify-content: center;
 }
 
 .button-wrapper.plus {
-  background: #24BEEF;
+  background: #24beef;
 }
 
 .button-wrapper button {
@@ -7410,21 +7423,21 @@ ul.recent-act-lw-main .act-info-wrap-left {
   outline: none;
 }
 
-.date-filter-calendar-recurring {  
+.date-filter-calendar-recurring {
   position: relative;
   overflow: hidden;
   height: 60px;
   border-radius: 18px;
-  border: 1px solid #0081C5;  
+  border: 1px solid #0081c5;
   box-shadow: 0px 3.7662px 15.6926px 0px rgba(37, 31, 48, 0.2);
 }
 
-.form-control-recurring {  
-  font-family: 'Comfortaa', sans-serif;
+.form-control-recurring {
+  font-family: "Comfortaa", sans-serif;
   font-size: 14px;
-  font-weight: 500;  
+  font-weight: 500;
   letter-spacing: 0;
-  text-align: left;  
+  text-align: left;
   color: #000;
   border: none;
   outline: none;
@@ -7443,15 +7456,15 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 
 .btn-active {
-  background: #0081C5;
+  background: #0081c5;
   color: white;
   border-radius: 50px !important;
 }
 
 .btn-inactive {
-  background: #F2F2F2;
-  color: #0081C5;
-  border: 0.85px solid #0081C5;
+  background: #f2f2f2;
+  color: #0081c5;
+  border: 0.85px solid #0081c5;
   border-radius: 50px !important;
 }
 
@@ -7459,7 +7472,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   display: flex;
   width: 100%;
   /* justify-content: space-between; */
-  background-color: #24BEEF1A;
+  background-color: #24beef1a;
   padding: 20px;
   border-radius: 17px;
   margin-top: 15px;
@@ -7469,11 +7482,11 @@ ul.recent-act-lw-main .act-info-wrap-left {
   flex-basis: 25%;
 }
 .RecurringScheduleDateWrap > div:nth-child(2),
-.RecurringScheduleDateWrap > div:nth-child(3){
+.RecurringScheduleDateWrap > div:nth-child(3) {
   flex-basis: 37.5%;
   justify-content: center;
 }
-.RecurringScheduleDateWrap>div {
+.RecurringScheduleDateWrap > div {
   display: flex;
   flex-wrap: wrap;
 }
@@ -7498,17 +7511,17 @@ ul.recent-act-lw-main .act-info-wrap-left {
   padding-right: 15px;
 }
 
-.rs_cm_div .rssvg_wrap+div {
+.rs_cm_div .rssvg_wrap + div {
   width: calc(100% - 55px);
 }
 
-.RecurringScheduleDateWrap>div:not(:last-child) {
+.RecurringScheduleDateWrap > div:not(:last-child) {
   margin-right: 0px;
 }
 
 .divider_date {
   height: 1px;
-  bordeR: 1px dashed #4ECAF2;
+  border: 1px dashed #4ecaf2;
   width: 135px;
   margin-left: 15px;
   margin-right: 15px;
@@ -7548,10 +7561,10 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 
 .rc-refund-main-inner .rcr-innner-wrap-1 {
-    padding-bottom: 0px;
+  padding-bottom: 0px;
 }
 
-.rcr-img-wrap img{
+.rcr-img-wrap img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -7581,7 +7594,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   color: var(--dark_blue);
 }
 
-.rc-refund-all-wrap{
+.rc-refund-all-wrap {
   display: flex;
 }
 
@@ -7615,7 +7628,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-left: 5%;
   width: 40%;
   border-radius: 24px;
-  background-color: #24BEEF1A;
+  background-color: #24beef1a;
   max-height: 420px;
   overflow-y: auto;
 }
@@ -7635,10 +7648,10 @@ ul.recent-act-lw-main .act-info-wrap-left {
   padding: 35px 25px;
 }
 
-.rc-refund-group-wrap {  
+.rc-refund-group-wrap {
   margin-top: 15px;
   max-width: 1000px;
-  width: 55%;  
+  width: 55%;
 }
 .rc-refund-group-wrap .pattern-wrap {
   background-repeat: repeat-x;
@@ -7696,7 +7709,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   font-family: "Quicksand", sans-serif;
 }
 
-.freq-date-header{
+.freq-date-header {
   font-family: "Quicksand", sans-serif;
   color: var(--dark_blue);
   line-height: 20px;
@@ -7705,7 +7718,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-bottom: 20px;
 }
 
-.rcr-group-label{
+.rcr-group-label {
   font-family: "Quicksand", sans-serif;
   color: var(--dark_blue);
   font-size: 16px;
@@ -7721,7 +7734,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
 .section-recurring-dates .rcr-transition-info-1 table td:first-child {
   width: calc(100% - 89px);
 }
-.section-recurring-dates .rcr-transition-info-1 table td:last-child{
+.section-recurring-dates .rcr-transition-info-1 table td:last-child {
   width: 20% !important;
   border: 8px solid #eaf9fe;
 }
@@ -7735,14 +7748,14 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 
 .w-50-md.rcr-transition-info.rcr-transition-info-1 {
-    width: 100% !important;
+  width: 100% !important;
 }
 
 .w-50-md.rcr-transition-info.rcr-transition-info-1.first-rec-detail {
-    width: 50% !important;
+  width: 50% !important;
 }
 
-.gl-td-1{
+.gl-td-1 {
   width: 50% !important;
   padding: 10px 0px;
 }
@@ -7753,7 +7766,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   width: 25% !important;
 }
 .rcr-innner-wrap.rcr-table-hover table tbody tr:hover {
-  box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.25);
+  box-shadow: 0px 0px 9px 1px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
 .rcr-innner-wrap.rcr-table-hover table tr tr,
@@ -7762,7 +7775,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   /* padding-top: 10px; */
 }
 
-.frequency-buttons{
+.frequency-buttons {
   gap: 10px;
   display: flex;
   margin-bottom: 50px;
@@ -7785,53 +7798,144 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 
 .frequency-buttons .btn-freqActive {
-  background: #0081C5;
+  background: #0081c5;
   color: white;
   border-radius: 50px !important;
 }
 
 .frequency-buttons .btn-freqInactive {
-  background: #F2F2F2;
-  color: #0081C5;
-  border: 0.85px solid #0081C5;
+  background: #f2f2f2;
+  color: #0081c5;
+  border: 0.85px solid #0081c5;
   border-radius: 50px !important;
 }
 
-.rec-label-class{
+.rec-label-class {
   font-family: "Visby Round CF", sans-serif;
-  font-style: normal;  
-  font-size: 16px; 
+  font-style: normal;
+  font-size: 16px;
   margin-bottom: 15px;
   color: var(--dark_blue);
 }
 
-.share-options{  
+.share-options {
   display: flex;
   justify-content: center;
   gap: 5px;
-  width: 100%;  
-  max-height: 0;  /* Initially no height */
+  width: 100%;
+  max-height: 0; /* Initially no height */
   overflow: hidden; /* Hide overflow content */
   transform: translateY(-100%); /* Move it up */
   opacity: 0;
-  transition: max-height 0.5s ease-in-out, transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: max-height 0.5s ease-in-out, transform 0.5s ease-in-out,
+    opacity 0.5s ease-in-out;
   pointer-events: none;
 }
 
 .share-options.active {
-  max-height: 50px;  /* Adjust this value to your need */
-  transform: translateY(0);  /* Reset to initial position */
+  max-height: 50px; /* Adjust this value to your need */
+  transform: translateY(0); /* Reset to initial position */
   opacity: 1;
   pointer-events: auto;
 }
 
-.qr-share-icon{
-    margin-left: 10px;
-    background: var(--blue);
-    box-shadow: 0px 23px 63px rgba(0, 0, 0, 0.12);
-    border-radius: 25px !important;    
-    padding: 0px 15px;
-    min-width: auto;
-    height: 50px;
-    color: #f3f3f3;
+.qr-share-icon {
+  margin-left: 10px;
+  background: var(--blue);
+  box-shadow: 0px 23px 63px rgba(0, 0, 0, 0.12);
+  border-radius: 25px !important;
+  padding: 0px 15px;
+  min-width: auto;
+  height: 50px;
+  color: #f3f3f3;
+}
+/* Reserved Modal CSS */
+.rese-modal-wrap .act-info-wrap-left {
+  padding-right: 0px;
+  width: 100%;
+  align-items: center;
+}
+.rese-modal-wrap .act-info-wrap-left:not(:last-child) {
+  margin-bottom: 20px;
+}
+.rese-modal-wrap .act-info-wrap-left .modal-body {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.rese-modal-wrap .act-info-wrap-left .modal-body > div {
+  width: 50%;
+}
+.rese-modal-wrap .act-user-info-wrap {
+  padding-right: 20px;
+}
+.rese-modal-wrap .res-data-wrap {
+  max-height: 350px;
+  overflow-y: auto;
+  padding-right: 40px;
+}
+.rese-modal-wrap .modal-content {
+  padding: 50px 30px 50px 40px;
+}
+.rese-modal-wrap .act-specification-text > p {
+  padding: 8px 15px !important;
+  font-size: 14px !important;
+  line-height: 16px !important;
+  width: fit-content;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.rese-modal-wrap p.withdraw {
+  background: rgba(0, 129, 197, 0.2);
+  color: rgba(147, 110, 227, 1);
+}
+.rese-modal-wrap p.withdraw:hover {
+  background: rgba(0, 129, 197, 0.2);
+  color: rgba(147, 110, 227, 1);
+}
+.rese-modal-wrap p.schedule_payment {
+  background: rgba(147, 110, 227, 0.2);
+  color: rgba(0, 129, 197, 1);
+}
+.rese-modal-wrap p.schedule_payment:hover {
+  background: rgba(147, 110, 227, 0.2);
+  color: rgba(0, 129, 197, 1);
+}
+.rese-modal-wrap .act-amt-wrap span:first-child {
+  font-size: 17px;
+  line-height: 20px;
+  color: red;
+}
+.rese-modal-wrap .act-amt-wrap span {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+}
+.rese-modal-wrap .act-user-in {
+  padding-left: 20px;
+}
+.rese-modal-wrap .modal-content > h5 {
+  margin-bottom: 25px;
+}
+.rese-modal-wrap .act-specification-text p svg {
+  margin-right: 5px;
+  width: 12px;
+}
+.h3.text-black.fw-bolder.reserved-amount span{
+  color: #0081c5;
+}
+.h3.text-black.fw-bolder.reserved-amount:hover {  
+  color: #0081c5;  
+  cursor: pointer;
+  animation: scaleAnim 0.6s infinite;
+}
+@keyframes scaleAnim {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
