--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7862,16 +7862,13 @@ ul.recent-act-lw-main .act-info-wrap-left {
   display: flex;
   flex-direction: row-reverse;
 }
-.rese-modal-wrap .act-info-wrap-left .modal-body > div {
-  width: 50%;
-}
 .rese-modal-wrap .act-user-info-wrap {
   padding-right: 20px;
 }
 .rese-modal-wrap .res-data-wrap {
   max-height: 350px;
   overflow-y: auto;
-  padding-right: 40px;
+  padding-right: 25px;
 }
 .rese-modal-wrap .modal-content {
   padding: 50px 30px 50px 40px;
@@ -7901,7 +7898,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   color: rgba(0, 129, 197, 1);
 }
 .rese-modal-wrap .act-amt-wrap span:first-child {
-  font-size: 17px;
+  font-size: 16px;
   line-height: 20px;
   color: red;
 }
@@ -7920,22 +7917,17 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-right: 5px;
   width: 12px;
 }
-.h3.text-black.fw-bolder.reserved-amount span{
+.h3.text-black.fw-bolder.reserved-amount span {
   color: #0081c5;
 }
-.h3.text-black.fw-bolder.reserved-amount:hover {  
-  color: #0081c5;  
+.h3.text-black.fw-bolder.reserved-amount:hover {
+  color: #0081c5;
   cursor: pointer;
-  animation: scaleAnim 0.6s infinite;
 }
-@keyframes scaleAnim {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.05);
-  }
-  100% {
-    transform: scale(1);
-  }
+.rese-modal-wrap .modal-body .act-specification-text {
+  padding-right: 0px !important;
+  width: 45% !important;
+}
+.rese-modal-wrap .modal-body .act-amt-wrap {
+  width: 55% !important;
 }
