--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7628,7 +7628,8 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-left: 5%;
   width: 40%;
   border-radius: 24px;
-  background-color: #24beef1a;
+  /* background-color: #24beef1a; */
+  background-color: #F3F3F3;
   max-height: 420px;
   overflow-y: auto;
 }
@@ -7736,7 +7737,8 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 .section-recurring-dates .rcr-transition-info-1 table td:last-child {
   width: 20% !important;
-  border: 8px solid #eaf9fe;
+  /* border: 8px solid #eaf9fe; */
+  border: 8px solid #F3F3F3;
 }
 
 .rc-refund-main-inner.section-recurring-dates > .d-flex > div {
