--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -328,6 +328,15 @@
     padding-right: 100px !important;
   }
 }
+@media only screen and (min-width: 1367px) and (max-width: 1499px) {
+  .contact-top-btn-nav .btn img {
+    max-width: 22px;
+  }
+  .contact-top-btn-nav .con-btn-wrap > .btn {
+    padding: 11px 10px;
+    font-size: 12px;
+  }
+}
 @media only screen and (max-width: 1366px) {
   .profile-right-sec {
     padding: 30px 50px 30px 50px;
@@ -635,6 +644,9 @@
     padding-top: 11px !important;
     padding-bottom: 11px !important;
   }
+  .contact-customer-type .anchor{
+    height: 40px;
+  }
   .activity-date-wrap {
     padding: 20px 0px 25px;
   }
@@ -872,6 +884,13 @@
   }
   .refund-sf-wrap {
     margin: 0px 20px;
+  }
+  .contact-customer-type {
+    margin: 0px 20px 20px 0px;
+    width: 75% !important;
+  }
+  .contact-customer-type .anchor{
+    height: 40px;
   }
   .div-font-14 {
     font-size: 13px;
@@ -2368,6 +2387,9 @@
     padding: 12px 22px 12px 40px !important;
     font-size: 14px;
     line-height: 16px;
+  }
+  .contact-customer-type {
+    min-height: 0px !important;
   }
   .search-field .search-btn {
     left: 15px;
@@ -4123,6 +4145,13 @@
   .refund-sf-wrap {
     margin: 0px;
   }
+  .contact-customer-type {
+    margin-bottom: 20px;
+    width: 100% !important;
+  }
+  .contact-customer-type .anchor{
+    height: 40px;
+  }
   .rf-details-div > div > p {
     font-size: 14px;
   }
@@ -4896,6 +4925,14 @@
     min-height: 80px;
     max-width: 300px;
     width: 100%;
+  }
+  .contact-customer-type {
+    min-height: 60px;
+    /* max-width: 300px; */
+    width: 100% !important;
+  }
+  .contact-customer-type .anchor{
+    height: 40px;
   }
   .refund-dr-wrap .date-filter-calendar > input {
     max-width: 300px !important;
