--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -4096,6 +4096,7 @@ cursor:pointer;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 ul::-webkit-scrollbar {
@@ -7991,4 +7992,22 @@ ul.recent-act-lw-main .act-info-wrap-left {
 }
 .rese-modal-wrap .modal-body .act-amt-wrap {
   width: 55% !important;
+}
+.contact-customer-type {
+  position: relative;
+  min-width: 200px;
+  margin: 0px 0px 0px 10px;
+}
+.contact-customer-type .anchor{
+  cursor: pointer;
+  display: inline-block;
+  padding: 9px 28px 9px 18px;  
+  background-position: center right 10px;
+  background-repeat: no-repeat;
+  background-size: 11px;
+  width: 100%;
+  border-radius: 10px;
+  /* color: #969696; */
+  border-color: #f2f2f2 !important;
+  height: 48px;
 }
