--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7998,6 +7998,16 @@ ul.recent-act-lw-main .act-info-wrap-left {
   min-width: 200px;
   margin: 0px 0px 0px 10px;
 }
+.contact-customer-type > .clearsearchbox {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 30px;
+  left: auto;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 9;
+}
 .contact-customer-type .anchor{
   cursor: pointer;
   display: inline-block;
@@ -8010,4 +8020,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   /* color: #969696; */
   border-color: #f2f2f2 !important;
   height: 48px;
+}
+.grayed-out {
+  color: #616466;
 }
