--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -8024,3 +8024,106 @@ ul.recent-act-lw-main .act-info-wrap-left {
 .grayed-out {
   color: #616466;
 }
+
+.terms-conditions {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+
+.terms-conditions input[type="checkbox"] {
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
+
+.terms-conditions label {
+  padding-left: 45px;
+  font-family: "Quicksand", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: var(--dark_blue);
+  position: relative;
+  text-align: justify;
+}
+
+.terms-conditions label:before {
+  border: 1px solid var(--blue);
+  content: "";
+  width: 18px;
+  height: 18px;
+  /* border-radius: 50%; */
+  background-color: transparent;
+  display: block;
+  position: absolute;
+  top: 30%;
+  transform: translateY(-50%);
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  left: 4px;
+}
+
+.terms-conditions label:after {
+  content: "";
+  left: 11px;
+  width: 5px;
+  height: 8px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+  display: block;
+  position: absolute;
+  top: 7.5px;
+  opacity: 0;
+  visibility: hidden;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.terms-conditions input:checked ~ label:before {
+  border-color: #93e06f;
+  background-color: #93e06f;
+}
+
+.terms-conditions input:checked ~ label:after {
+  opacity: 1;
+  visibility: visible;
+}
+
+.terms-conditions label .hyperlink {
+  color: var(--blue);
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.dashboard-main-links .more-menu:hover .more-sub-menu {
+  display: block;
+}
+
+.more-sub-menu {
+  border-radius: 0 25px 25px 0;
+  display: none;
+  position: absolute;
+  background-color: #333;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  left: 100%;
+  margin-top: -50px;
+}
+
+.more-sub-menu li {
+  padding: 0px;
+  text-decoration: none;
+  display: block;
+  color: white;
+}
+
+.more-sub-menu li:hover {
+  background-color: var(--blue);
+}
