height set in more-menu

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -582,6 +582,8 @@ pointer-events: none;
 
 .dashboard-link-wrap .more-sub-menu {
   padding-left: 0px;  
+  max-height: 250px;
+  overflow: auto;
 }
 
 .sidebar-open .dashboard-link-wrap .more-sub-menu li a {
