--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -8078,7 +8078,12 @@ ul.recent-act-lw-main .act-info-wrap-left {
   color: #616466;
 }
 
-.terms-conditions {
+.terms-conditions-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.terms-conditions-container .terms-conditions {
   position: relative;
   display: flex;
   align-items: center;
@@ -8086,14 +8091,14 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-top: 10px;
 }
 
-.terms-conditions input[type="checkbox"] {
+.terms-conditions-container .terms-conditions input[type="checkbox"] {
   visibility: hidden;
   width: 0;
   height: 0;
 }
 
-.terms-conditions label {
-  padding-left: 45px;
+.terms-conditions-container label {
+  padding-left: 25px;
   font-family: "Quicksand", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -8104,12 +8109,11 @@ ul.recent-act-lw-main .act-info-wrap-left {
   text-align: justify;
 }
 
-.terms-conditions label:before {
+.terms-conditions-container .terms-conditions label:before {
   border: 1px solid var(--blue);
   content: "";
   width: 18px;
-  height: 18px;
-  /* border-radius: 50%; */
+  height: 18px;  
   background-color: transparent;
   display: block;
   position: absolute;
@@ -8120,7 +8124,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   left: 4px;
 }
 
-.terms-conditions label:after {
+.terms-conditions-container .terms-conditions label:after {
   content: "";
   left: 11px;
   width: 5px;
@@ -8132,24 +8136,24 @@ ul.recent-act-lw-main .act-info-wrap-left {
   transform: rotate(45deg);
   display: block;
   position: absolute;
-  top: 7.5px;
+  top: -4.5px;
   opacity: 0;
   visibility: hidden;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.terms-conditions input:checked ~ label:before {
+.terms-conditions-container .terms-conditions input:checked ~ label:before {
   border-color: #93e06f;
   background-color: #93e06f;
 }
 
-.terms-conditions input:checked ~ label:after {
+.terms-conditions-container .terms-conditions input:checked ~ label:after {
   opacity: 1;
   visibility: visible;
 }
 
-.terms-conditions label .hyperlink {
+.terms-conditions-container label .hyperlink {
   color: var(--blue);
   text-decoration: underline;
   cursor: pointer;
@@ -8172,7 +8176,8 @@ ul.recent-act-lw-main .act-info-wrap-left {
   z-index: 1;
   left: 100%;
   /* margin-top: -50px; */
-  margin-top: -47.5px;
+  /* margin-top: -47.5px; */
+  margin-top: -94.5px;
   overflow: hidden;
 }
 
