--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -865,7 +865,8 @@ pointer-events: none;
 
 .modal-body h3 {
   word-break: break-all;
-  font-size: 32px;
+  /* font-size: 32px; */
+  font-size: 24px;
   line-height: 26px;
   margin: 0;
   text-align: center;
@@ -891,7 +892,7 @@ pointer-events: none;
 }
 
 #forgot-password-popup .modal-dialog {
-  max-width: 440px;
+  /* max-width: 440px; */
   margin: auto;
 }
 
