--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -189,6 +189,12 @@ ul {
   margin-bottom: 30px;
 }
 
+.new-mobile-send-cd-btn .btn,
+.sign-up-btn .btn {
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
 .btn.disabled,
 .btn:disabled,
 fieldset:disabled .btn {
@@ -4638,6 +4644,45 @@ img.img-size {
 }
 
 .fund-payment-option p {
+  padding-bottom: 0px !important;
+  font-family: "Quicksand", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px !important;
+  line-height: 16px !important;
+}
+
+.otp-option-wrap {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.otp-option-wrap .email-option {
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.otp-option-wrap .sms-option {
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.otp-option {
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.05);
+  border-radius: 15px;
+  background-color: #fff;
+  padding: 18px;
+  width: 130px;
+  min-width: 130px;
+  height: 100%;
+}
+
+.otp-option img {
+  margin-bottom: 15px;
+}
+
+.otp-option p {
   padding-bottom: 0px !important;
   font-family: "Quicksand", sans-serif;
   font-style: normal;
