Commerce of Chamber field added in Business Signup Form

--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -48,8 +48,7 @@
     margin-top: 10px;
     margin-bottom: 15px;
   }
-  .new-mobile-send-cd-btn .btn,
-  .sign-up-btn .btn {
+  .new-mobile-send-cd-btn .btn {
     margin-top: 10px;
     margin-bottom: 0px;
   }
