--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -189,8 +189,7 @@ ul {
   margin-bottom: 30px;
 }
 
-.new-mobile-send-cd-btn .btn,
-.sign-up-btn .btn {
+.new-mobile-send-cd-btn .btn {
   margin-top: 15px;
   margin-bottom: 0px;
 }
