--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -1515,6 +1515,9 @@
   form .form-field .form-control {
     padding: 11px 15px !important;
   }
+  .kyc-date-filter{
+    height: 47px !important;
+  }
   .amt-with-currency span {
     top: 11.5px;
   }
@@ -2201,6 +2204,9 @@
   }
   form .form-field .form-control {
     padding: 11px 15px !important;
+  }
+  .kyc-date-filter{
+    height: 47px !important;
   }
   /*.login-signup-content-wrap {
     max-height: 85vh;
@@ -3193,6 +3199,10 @@
     padding: 11px 15px !important;
     font-size: 14px;
   }
+  .kyc-date-filter{
+    border-radius: 12px !important;
+    height: 44px !important;
+  }
   .dashboard-link-wrap ul li a span {
     padding-left: 10px;
   }
@@ -3818,6 +3828,10 @@
     padding-left: 0px !important;
   }
   .text-danger {
+    line-height: 18px !important;
+    font-size: 12px !important;
+  }
+  .kyc-text-danger {
     line-height: 18px !important;
     font-size: 12px !important;
   }
